docs: remove produces and add recipientId
